--- a/Proyecto Mineria de Datos/AprendizajeMaquinaForm.resx
+++ b/Proyecto Mineria de Datos/AprendizajeMaquinaForm.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label8.Text" xml:space="preserve">
+    <value>*Para evitar le problema de la frecuencia cero hemos sumado una unidad a cada valor en las tablas de frecuencia.
+*En los categóricos, si el valor en la instancia no está dentro de los posibles o está mal escrito, se tomara el valor como si fuera faltante. </value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
